workloads/domains/character/base/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: character
spec:
  mtls:
    mode: PERMISSIVE
