workloads/domains/character/base/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: character-grpc
  namespace: character
  labels:
    app: character-grpc
spec:
  type: ClusterIP
  selector:
    app: character-grpc
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
