workloads/domains/character/base/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: character-api
  namespace: character
  labels:
    app: character-api
    domain: character
spec:
  host: character-api.character.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http2MaxRequests: 3000
        maxRequestsPerConnection: 100
